# healthy_api

./: .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: pytest.yml
docs/: Makefile  conf.py  healthy_api.rst  installation.rst  make.bat  modules.rst  usage.rst
script/: test
src/healthy_api/: __init__.py  git.py  version.py
src/healthy_api/adapters/: base_adapter.py  fastapi.py  flask.py
tests/: test_fastapi.py  test_flask.py  test_git.py
tests/version/: test_version.py
